Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-5414
Broken layout in Analyze mode
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P1: Critical
Fix Version/s:
Qt Creator 2.3.0
Affects Version/s:
Qt Creator 2.3.0
Component/s:
QML Profiler
Labels:
None
Environment:
Windows
Commits:
d7c2c23da81bad0ee0838112b6359027b5f6fe25
Description
See screenshots.
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
1.png
116 kB
12 Jul '11 16:39
2.png
118 kB
12 Jul '11 16:39
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Eike Ziller
Reporter:
Robert Löhning
Votes:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
12 Jul '11 16:39
Updated:
19 Feb '18 13:30
Resolved:
26 Jul '11 12:38
Gerrit Reviews
There are no open Gerrit changes