Fix initial layout in analyze mode.

Task-number: QTCREATORBUG-5414

Change-Id: I4ac8d150f20e35a769e6f7f13db420d81e93e7e2
Reviewed-on: http://codereview.qt.nokia.com/1552
Reviewed-by: hjk <qthjk@ovi.com>